# converter

./: Cargo.toml  Dockerfile  LICENSE  README.md  filetypes.json
converters/: ffmpeg.json  ffmpeg_audio.json  ffmpeg_image.json  ffmpeg_video.json  pandoc.json
src/: converters.rs  file_types.rs  main.rs
