[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialoguer = { version = "0.11.0", features = ["fuzzy-select"]}
glob = "0.3.1"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
