[package]
name = "converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-escapes = "0.1.1"
console = "0.15.7"
ctrlc = "3.4.2"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"]}
glob = "0.3.1"
serde = { version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
shlex = "1.2.0"
